--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,14 +49,14 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView3"
-        android:src="@drawable/tractro" />
+        android:src="@drawable/codondanhchoai" />
 
     <TextView
         android:id="@+id/nameSong"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
-        android:text="Trắc trở"
+        android:text="Cô đơn dành cho ai"
         android:textAlignment="center"
         android:textColor="#29A5F2"
         android:textSize="24sp"
@@ -70,7 +70,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:text="X2X"
+        android:text="LEE KEN x NAL"
         android:textAlignment="center"
         android:textColor="#808080"
         android:textSize="16sp"
@@ -147,16 +147,6 @@
         app:layout_constraintEnd_toStartOf="@+id/imageView13"
         app:layout_constraintTop_toTopOf="@+id/imageView13"
         app:srcCompat="@drawable/ic_suffle" />
-
-    <ImageView
-        android:id="@+id/btnPlayService"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        app:layout_constraintBottom_toBottomOf="@+id/img_song"
-        app:layout_constraintEnd_toEndOf="@+id/img_song"
-        app:layout_constraintStart_toStartOf="@+id/img_song"
-        app:layout_constraintTop_toTopOf="@+id/img_song"
-        app:srcCompat="@drawable/ic_playservicemusic" />
 
     <SeekBar
         android:id="@+id/timeLine"
